@@ -12,6 +12,8 @@ git-annex (5.20150318) UNRELEASED; urgency=medium
   * --auto is no longer a global option; only get, drop, and copy
     accept it. (Not a behavior change unless you were passing it to a
     command that ignored it.)
+  * Improve error message when --in @date is used and there is no
+    reflog for the git-annex branch.
 
  -- Joey Hess <id@joeyh.name>  Thu, 19 Mar 2015 17:05:32 -0400
 
